--- a/test/fixtures/book1/config.yml
+++ b/test/fixtures/book1/config.yml
@@ -1,4 +1,7 @@
 title: Example Book
+description:
+  An interesting look at the behaviours of household pets within the United Kingdom. 
+  Fully illustrated with a single picture of a penguin.
 
 author:
   name: Adam Cooke
